refactor(web-api): return HTTP 422 for PUT `/room/{room_id}/token` when `RoomParameters` are missing
This is the case when the room does not exist yet, but the client did not provide `RoomParameter`s.

Closes #136
